Update on Overleaf.

--- a/chapterTrendsSandN.tex
+++ b/chapterTrendsSandN.tex
@@ -619,7 +619,7 @@ Furthermore, Figure \ref{fig:pmExc_trends} presents
 \begin{figure}
 	\centering
 	\includegraphics[width=0.74\paperwidth]{FIGS_TRENDS/PM_exceedences_2001-2019.png}
-	\caption{\label{fig:pmExc_trends} Number of EMEP sites with  in \PM[10]  and \PM[2.5] exceedances of WHO AQGs between 2001 and 2019, as observed and modelled with the EMEP MSC-W model}
+	\caption{\label{fig:pmExc_trends} Number of EMEP sites with exceedances  in \PM[10]  and \PM[2.5] exceedances of WHO AQGs between 2001 and 2019, as observed and modelled with the EMEP MSC-W model}
 \end{figure}
 
 
