Update on Overleaf.

--- a/chapterTrendsSandN.tex
+++ b/chapterTrendsSandN.tex
@@ -610,16 +610,18 @@ PM is a complex pollutant, consisting of aerosol species both emitted
 directly and formed from gaseous precursors.Therefore, the reductions both in primary PM emissions, as well as \sox, \noii, \nhiii and NMVOC emissions are contribute to decrease PM concentrations. In the western parts of EMEP (EU \&UK \&EFTA), where the considered sites are located, the emissions of primary \PM[10] and \PM[2.5] were reduced by 32 and 35 \%, respectively, from 2000 to 2019. The largest in the same period was the reduction in \sox emissions (81 \%), resulting in 61 \% observed decrease of \soiv (70 \% according to the model). Following the reduction of \noii emissions by 48 \%, observed \noiii concentrations decreased slightly less, i.e. by 38 \% (44 \% according to the model). This was partly due to a rather moderate reduction by 12 \% in \nhiii emissions and the availability of free \nhiii due to the reduced formation of ammonium sulphate. 
 
 \COMMENT{Though \noii was reduced by 48 \%, given the moderate reduction by 12 \% in \nhiii emissions and the availability of free \nhiii due to the reduced formation of ammonium sulphate, the observed decrease in \noiii concentrations was only 38 \% (44 \% by the model).}
- The corresponding changes from 2000 to 2019 in \nhiv were 50 and 48 \%. Due to the lack of consistent observational data for carbonaceous aerosols in the 2000s, the trends of elemental (EC) and organic (OC) carbon have only been analysed for a 2010-2019 period (see discussion in \ref{sec:trendsECOC}). The examples of the changes in the chemical composition of \PM[2.5] from 2000(2002) to 2019 are given on Figure \ref{fig:KEX4} for the only six sites with enough measurements for deriving the mass balance. 
+ The corresponding changes from 2000 to 2019 in \nhiv were 50 and 48 \%. Due to the lack of consistent observational data for carbonaceous aerosols in the 2000s, the trends of elemental (EC) and organic (OC) carbon have only been analysed for a 2010-2019 period (see discussion in \ref{sec:trendsECOC}). The examples of the changes in the chemical composition of \PM[2.5] from 2000(2002) to 2019 are given on Figure \ref{fig:KEX4} for the four of the sites with enough measurements for deriving the mass balance. 
 
 Summarizing trend results for the 2000-2019 period, the average \PM[10] and \PM[2.5] trends, derived from observational data and model simulations, are decreasing. Significant trends have been estimated from observational data for 78 \% of sites for \PM[10] and 84 \% of sites for \PM[2.5]; the model simulates significant trends for more sites, namely 97 and 100 \% respectively. During this 20-year period, observed \PM[10] concentrations decreased by 35 \%  (36 \% from model simulations) on average at the considered sites. The average observed decrease of \PM[2.5] is 46 \%  (48 \% estimated by the model). We find quite a good correspondence between observed and model simulated trends in PM concentrations. 
 
-Furthermore, Figure \ref{fig:pmExc_trends} presents 
+Furthermore, Figure \ref{fig:pmExc_trends} presents for the period of 2001 to 2019 the changes in the number of sites at which the annual mean \PM[10]  and \PM[2.5] exceeded WHO AQG recommended levels (20 and 10 \ug respectively). Both observed and modelled with the EMEP MSC-W model results are shown. Only sites with observations for all the years from 2001 has been considered (the year 2000 has been excluded due to very few sites with observations available). Thus stricter criteria than for the trend assessment when 75\% data coverage over the time period was needed.
+
+The number of sites with annual mean \PM[10]  and \PM[2.5] exceedances was decreasing from 9 to 5/6 sites between 2001 and 2007, then it remained unchanged at totally 3 exceedance sites from 2008 to 2018, going down to only 2 sites in 2019. The model agreement with observations is much better for \PM[2.5], while it mostly underestimates (or does not simulate) the number of exceedance days for \PM[10].
 
 \begin{figure}
 	\centering
 	\includegraphics[width=0.74\paperwidth]{FIGS_TRENDS/PM_exceedences_2001-2019.png}
-	\caption{\label{fig:pmExc_trends} Number of EMEP sites with exceedances  in \PM[10]  and \PM[2.5] exceedances of WHO AQGs between 2001 and 2019, as observed and modelled with the EMEP MSC-W model}
+	\caption{\label{fig:pmExc_trends} Number of EMEP sites with exceedances of WHO AQG recommended levels for annual mean  \PM[10]  and \PM[2.5] from 2001 to 2019, observed (red) and modelled with the EMEP MSC-W model (blue).}
 \end{figure}
 
 
@@ -673,12 +675,12 @@ For SOMO35 and AOT40 the number of sites with significant trends in the observat
 
 
 \begin{table}
-\caption{\label{tab:O3_stat} The estimated mean values of the absolute and relative trends (2000--2019) in O$_3$ metrics based on stations north and south of 49\degrees N (observed and modelled). The corresponding 95\% confidence intervals of these mean values and the number of sites with significant trends are also provided. Results are given for the 75th and 99th percentile as well as SOMO35, EU definition of AOT40 for crops (AOT40c), and EU definition for forests (AOT40f). Note that the number of sites 'obs' and 'mod' refer to the number of sites with significant slopes (p<0.05) whereas the man values include all sites irrespective of the significance.}
+\caption{\label{tab:O3_stat} The estimated mean values of the absolute and relative trends (2000--2019) in O$_3$ metrics based on stations north and south of 49\degrees N (observed and modelled). The corresponding 95\% confidence intervals of these mean values and the number of sites with significant trends are also provided. Results are given for the 75th and 99th percentile of daily maximum ozone, as well as for SOMO35 and AOT40 for crops (AOT40c) forests (AOT40f). Note that here we use the EU definition of AOT40 (c.f. Sect.~\ref{DEFS}). Note that the number of sites 'obs' and 'mod' refer to the number of sites with significant slopes (p<0.05) whereas the man values include all sites irrespective of the significance.}
 \begin{center}
 \scalebox{0.65}{%
 \begin{tabular}{Hll|ccc|cccc|cccc}
 \toprule
-          &    &    & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute change (ppb)} & \multicolumn{4}{c}{Relative change (\% $yr^{-1}$)} \\
+          &    &    & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute change (ppb)} & \multicolumn{4}{c}{Relative change (\%/yr)} \\
 Period & Area & Parameter &           total & obs & mod &                    obs. &          conf.interval &  mod. &          conf.interval &                     obs. &         conf.interval &  mod. &        conf.interval \\
 \midrule
 2000-2019 & N of 49N & 75p &  52 &  19 &  30 & -0.15 & (-0.19, -0.10) & -0.13 & (-0.14, -0.10) & -0.31 & (-0.40, -0.21) & -0.26 & (-0.30, -0.22) \\
@@ -690,10 +692,11 @@ Period & Area & Parameter &           total & obs & mod &                    obs
 2000-2019 & S of 49N & 75p &  40 &  16 &  38 & -0.20 & (-0.27, -0.13) & -0.26 & (-0.27, -0.23) & -0.35 & (-0.46, -0.21) & -0.46 & (-0.49, -0.43) \\
 2000-2019 & S of 49N & 99p &  40 &  18 &  37 & -0.48 & (-0.59, -0.36) & -0.51 & (-0.54, -0.46) & -0.57 & (-0.71, -0.43) & -0.70 & (-0.74, -0.65) \\
 2000-2019 & S of 49N & SOMO35 &  35 &  14 &  31 & -36.74 & (-54.9, -18.6) & -40.59 & (-45.3, -36.2) & -0.77 & (-1.27, -0.28) & -1.12 & (-1.23, -1.01) \\
-2000-2019 & S of 49N & EUAOT40c &  35 &  13 &  33 & -190.26 & (-247., -128.) & -286.65 & (-313., -260.) & -1.49 & (-1.97, -1.02) & -1.98 & (-2.17, -1.80) \\
-2000-2019 & S of 49N & EUAOT40f &  35 &  16 &  31 & -312.64 & (-422., -196.) & -480.46 & (-537., -425.) & -1.36 & (-1.87, -0.85) & -1.74 & (-1.94, -1.55) \\
+2000-2019 & S of 49N & AOT40c &  35 &  13 &  33 & -190.26 & (-247., -128.) & -286.65 & (-313., -260.) & -1.49 & (-1.97, -1.02) & -1.98 & (-2.17, -1.80) \\
+2000-2019 & S of 49N & AOT40f &  35 &  16 &  31 & -312.64 & (-422., -196.) & -480.46 & (-537., -425.) & -1.36 & (-1.87, -0.85) & -1.74 & (-1.94, -1.55) \\
 \bottomrule
-\end{tabular}}
+\end{tabular}
+} % end scalebox
 \end{center}
 \end{table}
 
@@ -1140,7 +1143,7 @@ the natural and the anthropogenic fraction of the carbonaceous aerosol
 must be separated, then further into abatable categories. Separation of
 eBC into biomass burning/solid fuel (\EBCbb) and fossil fuel/liquid fuel
 (\EBCff) is possible using data from the multi wavelength aethalometer,
-currently available at $<$25 EMEP/ACTRIS sites across Europe \citep{Yttri:2014,Platt:2020a,Platt:2020b,Platt20XX}. An obvious next
+currently available at $>$25 EMEP/ACTRIS sites across Europe \citep{Yttri:2014,Platt:2020a,Platt:2020b,Platt20XX}. An obvious next
 step is to implement such analysis as part of regular monitoring,
 making it possible to validate not only model performance, but also the
 effort made in reducing carbonaceous aerosol from fossil fuel and biomass
