--- a/ExSummary.tex
+++ b/ExSummary.tex
@@ -25,10 +25,14 @@ In addition, 56 sites from 21 Parties reported at least one of the components re
 The mean daily max O$_3$, SOMO35 and AOT40 all show a distinct gradient with levels increasing from north to south, a well established feature for ozone reflecting the dependency of ozone on the photochemical conditions. The geographical pattern in the measured values is fairly well reflected by the model results for all these three metrics. Peak levels of surface O$_3$ were high in 2019 and this was linked to extreme heat waves in June and July. The national temperature records were broken in France, United Kingdom and Germany this year and associated with these episodes very high ozone levels were observed. Some stations registered the highest peak ozone levels since the mid 1990s. Many countries reported levels above EU's information threshold (180 \ug) and some even above the alert threshold (240 \ug). This confirms the strong link between weather conditions and surface ozone and is a signal that future climate change could have a substantial influence on the frequency and intensity of ozone episodes in Europe.
 
 %Svetlana & Wenche update: Updated 31.8.2021
-Overall, the year of 2019 was quite moderate with respect to PM air pollution in Europe, which was due to dominating meteorological conditions with a mild winter and excessive precipitation in the cold seasons (especially autumn) in many parts of Europe. In addition, the spring/summer period was (with some exceptions) relatively warm which favoured evaporation of semi-volatile inorganic and organic aerosols.
+Overall, the year of 2019 was quite moderate with respect to PM air pollution in Europe, which was due to dominating meteorological conditions with a mild winter and excessive precipitation in the cold seasons (especially autumn) in many parts of Europe. %In addition, the spring/summer period was (with some exceptions) relatively warm which favoured evaporation of semi-volatile inorganic and organic aerosols.
 The results from the EMEP MSC-W model simulations and the observations show general increase of the annual mean levels of \PM[10] and \PM[2.5] over land from north to south. The regional background concentrations are below 2-5 \ug in Northern Europe, increasing to 5-15 \ug in the mid-latitudes and further south. The annual mean \PM[10] are in excess of 20 \ug in the Po Valley and on Cyprus. The observations also show \PM[10] concentrations above 20 \ug in Slovakia. \PM[2.5] concentrations are below 10 \ug over most of EMEP domain, or otherwise between 10 and 15 \ug in parts of Benelux, Poland, Hungary and some of Balkan countries. Furthermore, the model calculates high PM for the regions east of the Caspian Sea and over the southern Mediterranean, with annual mean concentrations in excess of 50 \ug due to windblown dust from the arid soils and deserts. There is a good general agreement between the modelled and observed distributions of annual mean \PM[10] and \PM[2.5], with correlation coefficients of 0.60 and 0.72, respectively. Overall, the model underestimates the observed annual mean of \PM[10] by 12\% and \PM[2.5] by 13\% .
 
-Much rain in November-December combined with the mild winter temperatures resulted in the absence of major PM episodes in 2019 typical for Europe in winters. Model results and EMEP observational data show that the annual mean regional background \PM[10] concentrations were below the EU limit value of 40 \ug for all of Europe in 2019. The model calculates annual mean \PM[10] above the WHO recommended AQG of 20 \ug for only small regions in the Po Valley and western Turkey. The highest observed annual mean \PM[10], exceeding the AQG of 20 \ug, were only registered at two Slovakian and one Greek site. Further, the joint model and observational results show that annual mean regional background \PM[2.5] concentrations in 2019 were below the EU limit value of 25 \ug (except in the Po Valley according to the model). However, there were observed cases of exceedance of the WHO AQG value of 10 \ug at nine sites, with the highest values at the Hungarian site HU0004 with 16 \ug, followed by German DE0044 with 14 \ug and Italian IT0004 with 13 \ug. Overall, considerable fewer days with PM exceedances have been observed and modelled for EMEP sites for 2019. \PM[10] daily concentrations in excess of 50 \ug were observed at 31 out of 67 sites in 2019, but no violations of the \PM[10] EU limit value (more than 35 exceedance days) were registered. Still, 12 sites had more than 3 exceedance days recommended by WHO AQG’s (with the highest number of observed exceedance days being 7 at DE0001 and 6 at LV0010 and RS0005). Regional background \PM[2.5] concentrations exceeded the WHO AQG recommended limit of 25 \ug at 37 out of 51 stations in 2019. Among those, at 21 sites the number of exceedance days were more than 3 (the recommended limit according to WHO AQG).  The highest number of exceedance days was 40 at HU0002 and IT0004, followed by 30, 26 and 24 at DE0044, PL0005 and AT0002, respectively. Most of the exceedances registered at the central European sites occurred during the winter and in the spring, while rather few exceedances occurred in the wet autumn of 2019. By contrast, at the Mediterranean sites the exceedances were more frequent during summer. PM exceedances simulated by the EMEP MSC-W model correspond in general quite well with the EMEP observations, with some model’s tendency of underestimating the occurrence of exceedances for Central European sites, while overestimating those for some of the Mediterranean sites heavily influenced by desert dust.
+Much rain in November-December combined with the mild winter temperatures resulted in the absence of major PM episodes in 2019 typical for Europe in winters. Model results and EMEP observational data show that the annual mean regional background \PM[10] concentrations were below the EU limit value of 40 \ug for all of Europe in 2019. The model calculates annual mean \PM[10] above the WHO recommended AQG of 20 \ug for only small regions in the Po Valley and western Turkey. The highest observed annual mean \PM[10], exceeding the AQG of 20 \ug, were only registered at two Slovakian and one Greek site. Further, the joint model and observational results show that annual mean regional background \PM[2.5] concentrations in 2019 were below the EU limit value of 25 \ug (except in the Po Valley according to the model). However, there were observed cases of exceedance of the WHO AQG value of 10 \ug at nine sites.
+%, with the highest values at the Hungarian site HU0004 with 16 \ug, followed by German DE0044 with 14 \ug and Italian IT0004 with 13 \ug. 
+Overall, considerable fewer days with PM exceedances have been observed and modelled for EMEP sites for 2019. \PM[10] daily concentrations in excess of 50 \ug were observed at 31 out of 67 sites in 2019, but no violations of the \PM[10] EU limit value (more than 35 exceedance days) were registered. Still, 12 sites had more than 3 exceedance days recommended by WHO AQG’s %(with the highest number of observed exceedance days being 7 at DE0001 and 6 at LV0010 and RS0005). 
+Regional background \PM[2.5] concentrations exceeded the WHO AQG recommended limit of 25 \ug at 37 out of 51 stations in 2019. Among those, at 21 sites the number of exceedance days were more than 3 (the recommended limit according to WHO AQG).  %The highest number of exceedance days was 40 at HU0002 and IT0004, followed by 30, 26 and 24 at DE0044, PL0005 and AT0002, respectively. 
+Most of the exceedances registered at the central European sites occurred during the winter and in the spring, while rather few exceedances occurred in the wet autumn of 2019. By contrast, at the Mediterranean sites the exceedances were more frequent during summer. PM exceedances simulated by the EMEP MSC-W model correspond in general quite well with the EMEP observations, with some model’s tendency of underestimating the occurrence of exceedances for Central European sites, while overestimating those for some of the Mediterranean sites heavily influenced by desert dust.
 
 
 
@@ -49,11 +53,7 @@ Much rain in November-December combined with the mild winter temperatures result
 %and overestimating at some Mediterranean sites. 
 %The majority of PM exceedances occurred during the winter and autumn 2018 at Central European sites, whereas during the summer at the Mediterranean sites. Remarkably, the largest number of \PM[2.5] exceedances at three out of four German sites occurred in spring, while much fewer occurred during the cold seasons.
 
-
-
-
-
-\QUERY{Something about wet dep, Hilde}
+%\QUERY{Something about wet dep, Hilde}
 
 
 %\subsubsection*{The summer of 2018} OLD
@@ -98,10 +98,10 @@ We analyze trends in air concentrations for ozone, sulphur dioxide, particulate 
 Unfortunately, the EMEP observational network is dominated by sites in the western part of the EMEP domain and has hardly any coverage in the EECCA and western Balkan area. Therefore, the assessment discussed below is only valid for a part of the EMEP domain. Furthermore, the developments of emissions in the western and eastern part of the EMEP domain have followed different patterns, with clear decreases of most pollutants in the western countries but more stable (albeit gradually decreasing for most pollutants) in the eastern part of the domain over the 2000-2019 period. Thus, the trends in the eastern part of the EMEP domain are expected to be different than those presented here for the western part of the domain. Note also, that the uncertainties related to emissions and their trends in the eastern countries are large.
 
 %SOX: Wenche
-The SO$_x$ emissions in the EU27+UK+EFTA countries have declined by more than 80\% (-4.3\% yr$^{-1}$) the last two decades. This is reflected in both the observed and modelled trends for all the atmospheric sulfur components. The average total reductions in observations for the last 20 years (2000--2019) are 74\%, 61\% and 60\% for \soii, \soiv in aerosols and in wet deposition respectively, while the trends in model calculations are somewhat higher: 97\%, 72\% and 81\%, respectively.
+The SO$_x$ emissions in the EU27+UK+EFTA countries have declined by more than 80\% (-4.3\% yr$^{-1}$) the last two decades. This is reflected in both the observed and modelled trends for all the atmospheric sulfur components. The average total reductions in observations for the last 20 years (2000--2019) are 74\%, 61\% and 60\% for \soii, \soiv in aerosols and in wet deposition respectively, while the reductions in model calculations are somewhat larger: 97\%, 72\% and 81\%, respectively.\QUERY{Burde vi si noe om 'mismatch' between obs and mod and emissions?}
 
 %NOx Hilde
-We find that oxidized nitrogen in precipitation and in air (NO$_2$, HNO$_3$, NO$_3^{-}$ aerosol and the sum of HNO$_3$ and NO$_3^{-}$ aerosol) has been decreasing since 2000. However, the decrease in the observations (-24\%, 1.2\% yr$^{-1}$) for NO$_2$ and for wet deposition of oxidized nitrogen (-26\%, -1.4\% yr$^{-1}$) are smaller than in model calculations (-42\%, -2.2\% yr$^{-1}$ for NO$_2$) and -40\% (-2.3\% yr$^{-1}$) for wet deposition of oxidized nitrogen and emissions (-48\% for EU27+UK+EFTA countries) for 2000--2019.
+We find that oxidized nitrogen in precipitation and in air (NO$_2$, HNO$_3$, NO$_3^{-}$ aerosol and the sum of HNO$_3$ and NO$_3^{-}$ aerosol) has been decreasing since 2000. However, the decrease in the observations (-24\%, 1.2\% yr$^{-1}$) for NO$_2$ and for wet deposition of oxidized nitrogen (-26\%, -1.4\% yr$^{-1}$) are smaller than in model calculations (-42\%, -2.2\% yr$^{-1}$ for NO$_2$) and -40\% (-2.3\% yr$^{-1}$) for wet deposition of oxidized nitrogen. The changes found for observations of oxidized nitrogen compunds are also significantly smaller than the changes in reported emissions (-48\% for EU27+UK+EFTA countries) for 2000--2019.
 
 %redN Hilde 
 For reduced nitrogen, the observations and the model calculations confirm that very small reductions of ammonia emissions have been achieved during the 2000--2019 period. 
@@ -123,16 +123,23 @@ fraction to get a quantitative overview of the abatable fractions.
 
 
 %Ozone Sverre
-Trends in six annual percentiles of daily maximum O$_3$ as well as three aggregated metrics (AOT40 for crops, AOT40 for forests and SOMO35) were calculated for the period 2000-2019. For the high percentiles as well as for the three aggregated metrics both the model values and the observations show a decrease during this period when averaged over the stations. The observations show a mean decrease of 0.5-1.5 \% $yr^{-1}$ relative to 2000 over this 20 years period for the three aggregated metrics while the model calculates somewhat larger reductions, of the order of 0.9-2\% $yr^{-1}$. For the 99th percentile of the annual daily maximum values, corresponding to the 4th highest ozone concentration, the mean of the observed and modelled values agree very well for sites north of 49 \degrees N, both showing a reduction of the order of 0.5  \% $yr^{-1}$ relative to 2000. For sites south of 49 \degrees N the observations show a similar relative reduction on average whereas the model calculates stronger reductions. Comparisons of the observed and modelled absolute concentration levels of O$_3$ reveal that the model underpredicts the high percentile and overpredicts the AOT40 levels. The underprediction increases with higher percentiles and is strongest for sites south of 49 \degrees N. The modelled downward trend in the high percentiles is, however, of the same order if comparing absolute levels. For SOMO35, the trend in the model values agrees well with the observed levels.
+Trends in six annual percentiles of daily maximum O$_3$ as well as three aggregated metrics (AOT40 for crops, AOT40 for forests and SOMO35) were calculated for the period 2000-2019. For the high percentiles as well as for the three aggregated metrics both the model values and the observations show a decrease during this period when averaged over the stations. The observations show a mean decrease of 0.5-1.5 \% $yr^{-1}$ relative to 2000 over this 20 years period for the three aggregated metrics while the model calculates somewhat larger reductions, of the order of 0.9-2\% $yr^{-1}$. For the 99th percentile of the annual daily maximum values, corresponding to the 4th highest ozone concentration, the mean of the observed and modelled values agree very well for sites north of 49\degrees N, both showing a reduction of the order of 0.5  \% $yr^{-1}$ relative to 2000. For sites south of 49\degrees N the observations show a similar relative reduction on average whereas the model calculates stronger reductions. Comparisons of the observed and modelled absolute concentration levels of O$_3$ reveal that the model underpredicts the high percentile and overpredicts the AOT40 levels. The underprediction increases with higher percentiles and is strongest for sites south of 49\degrees N. The modelled downward trend in the high percentiles is, however, of the same order if comparing absolute levels. For SOMO35, the trend in the model values agrees well with the observed levels.
 
 Comparison of trends in measured and modelled VOCs is not included in this report. The main reasons being the lack of established procedures for doing such a comparison as well as the lack of proper monitoring sites with sufficient data capture and sufficient homogeneity in the monitoring. The lumped VOCs in the model could not be compared directly with measured species. The topic of VOC trends will be investigated in more detail in the near future.  
 
 
 
-%Exceedances of critical loads Hilde
+%Exceedances of critical loads Hilde. Done 31.8.2021
+The exceedances (AAE) of critical loads have been calculated for the years 2000, 2005, 2010, 2015 and 2019 based on the 0.1$\degrees \times$ 0.1$\degrees$ EMEP MSC-W calculations discussed in this report. The critical loads for eutrophication are exceeded in practically all countries in all years. The share of ecosystems where the critical load for eutrophication is exceeded decreases relatively slowly, starting at 76.4\% in 2000 and ending at 65.5\% in 2019. The European average AAE is about 452 eq ha$^{-1}$ yr$^{-1}$ (2000) and 276 eq
+ha$^{-1}$ yr$^{-1}$ (2019). The highest exceedances of critical loads are found in the Po Valley in Italy, the
+Dutch-German-Danish border areas and in north-eastern Spain.
 
-
-
+By contrast, critical loads of acidity are exceeded in a much smaller area. Hot spots of
+exceedances can be found in the Netherlands and its border areas to Germany and
+Belgium, and some smaller maxima in southern Germany and Czechia, whereas most of Europe is not exceeded
+Acidity exceedances occur
+on 16.2\% (2000) and 5.0\% (2019) of the ecosystem area and the European average
+AAE is about 133 eq ha$^{-1}$ yr$^{-1}$ (2000) and 25 eq ha$^{-1}$ yr$^{-1}$ (2019).
 
 
 
@@ -152,7 +159,7 @@ The  fine/coarse fractions for sea-salt and nitrate were modified. Emissions and
 
 
 
-\subsubsection*{Development in the monitoring programme} %Wenche/NILU to update
+\subsubsection*{Development in the monitoring programme} \QUERY{Wenche/NILU to update}
 The two last chapters of the report present the implementation of the EMEP monitoring strategy and general development in the monitoring programme including data submission. There are large differences between Parties in the level of implementation, as well as significant changes in the national activities during the period 2000-2018. With respect to the requirement for level 1 monitoring, 40\% of the Parties have had an improvement since 2010, while 33\% have reduced the level of monitoring. For level 2 monitoring there has been a general positive development in recent years. However, only few sites have a complete measurement program.
 
 The complexity of data reporting has increased in recent years, and it is therefore now mandatory for the data providers to use the submission and validation tool when submitting data to EMEP to improve the quality and timeliness in the data flow. 
