Update on Overleaf.

--- a/ExSummary.tex
+++ b/ExSummary.tex
@@ -110,24 +110,29 @@ Total ammonium (NH$_3$ + NH$_4$) in air show larger negative changes of about -1
 
 These large differences between the changes found for the different reduced nitrogen components can be explained by the interaction of ammonia with the sulphur and nitrogen components. It can be noted that the results imply that the contribution of ammonia emission to aerosols have been largely reduced during the 2000--2019 period, due to the impact of SO$_x$ and NO$_x$ emission reductions. 
 
-\QUERY{PM and exceedances of WHO guideline values for PM$_{2.5}$: Svetlana}
+
 
 
 %OC and EC and 'do the organic fraction increase?': David & Karl Espen
-For EC and OC we have calculated observed and modelled trends for 15 sites across Europe for the period 2010--2019. A reduction (of ca. 4.5~\%/yr) in observed EC was found, and a similar reduction was found for OC in the winter months (when OC is expected to be most sensitive to primary anthropogenic emissions rather than to OA associated with biogenic sources). These trends suggest that abatement measures are having some success in reducing both EC and OC in Europe, especially in wintertime.  The model reproduced modelled EC values and trends quite well, but underpredicted OC, both in terms of absolute values and trends. This underprediction is at least partly due to the omission of condensable organics in the reported emissions from many countries. 
+For EC and OC we have calculated observed and modelled trends for 15 sites across Europe for the period 2010--2019. A reduction (of ca. 4.5~\%/yr) in observed EC was found, and a similar reduction was found for OC in the winter months (when OC is expected to be most sensitive to primary anthropogenic emissions rather than to OA associated with biogenic sources). These trends suggest that abatement measures are having some success in reducing both EC and OC in Europe, especially in wintertime. 
+%\NEW{
+Trends in summertime OC were much less clear in both the model and observations, almost certainly due to the increased impact of biogenic sources.
+%} END NEW
+The model reproduced observed EC values and trends quite well, but underpredicted OC, both in terms of absolute values and trends. This underprediction is at least partly due to the omission of condensable organics in the reported emissions from many countries. 
+%NEW:
+Organic aerosol comprises a major fraction of \pmfine, but major efforts are needed to separate and understand its natural and anthropogenic components, in order to get a quantitative overview of the abatable fractions.
 %
+\SKIP{Original was:
 The carbonaceous fraction appears particularly important for a
 further reduction in the observed \pmfine mass concentration in Europe,
 although effort is needed to separate its natural and anthropogenic
 fraction to get a quantitative overview of the abatable fractions.
+} % END SKIP
 
+\QUERY{PM and exceedances of WHO guideline values for PM$_{2.5}$: Svetlana}
 
 %Ozone Sverre
 Trends in six annual percentiles of daily maximum O$_3$ as well as three aggregated metrics (AOT40 for crops, AOT40 for forests and SOMO35) were calculated for the period 2000-2019. For the high percentiles as well as for the three aggregated metrics both the model values and the observations show a decrease during this period when averaged over the stations. The observations show a mean decrease of 0.5-1.5 \% $yr^{-1}$ relative to 2000 over this 20 years period for the three aggregated metrics while the model calculates somewhat larger reductions, of the order of 0.9-2\% $yr^{-1}$. For the 99th percentile of the annual daily maximum values, corresponding to the 4th highest ozone concentration, the mean of the observed and modelled values agree very well for sites north of 49\degrees N, both showing a reduction of the order of 0.5  \% $yr^{-1}$ relative to 2000. For sites south of 49\degrees N the observations show a similar relative reduction on average whereas the model calculates stronger reductions. Comparisons of the observed and modelled absolute concentration levels of O$_3$ reveal that the model underpredicts the high percentile and overpredicts the AOT40 levels. The underprediction increases with higher percentiles and is strongest for sites south of 49\degrees N. The modelled downward trend in the high percentiles is, however, of the same order if comparing absolute levels. For SOMO35, the trend in the model values agrees well with the observed levels.
-
-Comparison of trends in measured and modelled VOCs is not included in this report. The main reasons being the lack of established procedures for doing such a comparison as well as the lack of proper monitoring sites with sufficient data capture and sufficient homogeneity in the monitoring. The lumped VOCs in the model could not be compared directly with measured species. The topic of VOC trends will be investigated in more detail in the near future.  
-
-
 
 %Exceedances of critical loads Hilde. Done 31.8.2021
 The exceedances (AAE) of critical loads have been calculated for the years 2000, 2005, 2010, 2015 and 2019 based on the 0.1$\degrees \times$ 0.1$\degrees$ EMEP MSC-W calculations discussed in this report. The critical loads for eutrophication are exceeded in practically all countries in all years. The share of ecosystems where the critical load for eutrophication is exceeded decreases relatively slowly, starting at 76.4\% in 2000 and ending at 65.5\% in 2019. The European average AAE is about 452 eq ha$^{-1}$ yr$^{-1}$ (2000) and 276 eq
