--- a/Refs2021.bib
+++ b/Refs2021.bib
@@ -2198,3 +2198,26 @@
   url      = {http://www.sciencedirect.com/science/article/pii/S0378112719304244},
 }
 
+@incollection{ICP2017,
+ booktitle = {Manual for modelling and mapping critical loads and levels},
+ title={Mapping Critical Levels for Vegetation},
+  institution = {UNECE Convention on Long-range Transboundary Air Pollution},
+  chapter = 3,
+  year = 2017,
+  pages = 66,
+  publisher = {ICP vegetation, CEH, UK},
+  tmpurl = {\url{icpvegetation.ceh.ac.uk/get-involved/manuals/mapping-manual}}
+}
+
+@Article{Wiedinmyer2011,
+  author    = {Wiedinmyer, C. and Akagi, S. K. and Yokelson, R. J. and Emmons, L. K. and Al-Saadi, J. A. and Orlando, J. J. and Soja, A. J.},
+  title     = {{The Fire INventory from NCAR (FINN): a high resolution global model to estimate the emissions from open burning}},
+  journal   = gmd,
+  year      = {2011},
+  volume    = {4},
+  number    = {3},
+  pages     = {625-641},
+  issn      = {1991-959X},
+ doi       = {10.5194/gmd-4-625-2011},
+  unique-id = {{ISI:000295379500006}}
+}
