--- a/acknow.tex
+++ b/acknow.tex
@@ -9,9 +9,12 @@
 This work has been funded by the EMEP Trust Fund.\\
 
 The development of the EMEP MSC-W model has also been supported by the Nordic Council of Ministers, the Norwegian Space Centre, the Norwegian Ministry of Climate and Environment and Copernicus Atmosphere Modelling Service (CAMS) projects.
+
+\SKIP{
 Development work has also been supported at Chalmers University of Technology in Sweden using funds from the Swedish Strategic Research project MERGE, the 
 framework research program on `Photochemical smog in China' financed by
 the Swedish Research Council (639-2013-6917), and FORMAS.\\
+}
 
 The work on condensable organics was partly funded by the Norwegian Ministry of Climate and Environment. 
 
