--- a/chapterAPPX_ModelEval.tex
+++ b/chapterAPPX_ModelEval.tex
@@ -16,51 +16,40 @@ The EMEP MSC-W model is regularly evaluated against various kinds of measurement
 
 As the main application of the EMEP MSC-W model within the LRTAP Convention is to assess the status of air quality on regional scales and to quantify long-range transboundary air pollution, the focus of the evaluation performed for the EMEP status reports is on the EMEP measurement sites.
 
-As a novely this year, EMEP MSC-W model performance is visualized through
-AeroVal, a new web interface that presents a detailed evaluation against measurements from
+Nevertheless, a more detailed evaluation against measurements from both the EMEP network and the European Environment Agency's (EEA) Air Quality e-Reporting Database can now be found at the AeroVal webpage that has been developed recently for the evaluation
+of EMEP MSC-W model output:\\
+\url{https://aeroval.met.no/evaluation.php?project=emep}.
 
-...
+On that page the user can select the set of measurement data, the
+station or country of interest, and view a large number of statistical
+parameters (bias, correlation, root mean square error, etc.).
 
-the European Environment Agency's (EEA) Air Quality e-Reporting Database:\\
-\url{https://aerocom-evaluation.met.no/main.php?project=emep}\\
-On that page the user can select the classification of measurement data
-(rural, urban, non-traffic, or all stations) and view a large number of
-statistical parameters (bias, correlation, root mean square error, etc.).
-
-The web interface displays the co-located observational and model data sets
+The web interface displays co-located observational and model datasets
 and contains:
 \begin{itemize}
 
-\item daily and monthly time series for each station, or averaged per
-  country (or the whole area covered by the model and the measurement network);
-\item seasonal- and annual-mean diurnal variation for each of the seven days of the week;
+\item daily and monthly time series for each station, averaged per
+  country, or the whole area covered by the model and
+  the measurement network;
+%\item seasonal- and annual-mean diurnal variation for each of the seven
+%  days of the week;
 \item statistics and scatter plots calculated for each station and country;
 \item an overall evaluation of the results using statistics calculated for
-  each country or the whole area covered by the model and the measurement network.
+  each country or the whole area covered by the model and the measurement
+  network (so-called Heatmaps and Taylor Diagrams).
 \end{itemize}
-In all cases the statistics are calculated using monthly resolution
-by default. Daily statistics are available by adding \&stats=daily to the
-site URL given above.
+%In all cases, the statistics are calculated using data in monthly resolution
+%by default. Daily statistics are available by adding \&stats=daily to the
+%site URL given above.
 
-Evaluation is made for the following chemical species and indicators:
-NO$_{2}$, O$_{3}$, PM$_{2.5}$ and PM$_{10}$, and O$_{3}$max (maximum daily
-ozone).
-Different types of visualization (bar charts, line charts, tables,
-etc.) are available for viewing and for download. The measurement data
-have been retrieved from the validated {\em E1a} stream of EEA and further
-harmonized and quality controlled by the GHOST tool (Globally Harmonised
-Observational Surface Treatment) developed at the Barcelona Supercomputing
-Center (BSC).
-
-For supplemental evaluation of Elemental Carbon (EC), the modelled
-absorption coefficient (mainly due to EC) is compared to surface \textit{in-situ}
-observations of the aerosol light absorption coefficient, accessed through
-the Global Atmospheric Watch - WDCA database EBAS
-(\url{http://ebas.nilu.no/}). More details about this can be found in Chapter~\ref{ch:EC}.
+Evaluation is made for O$_{3}$, PM$_{2.5}$, PM$_{10}$, SO$_{2}$, SO$_{4}$,
+NO$_{2}$, and several other nitrogen-containing species.
+The different types of visualization (bar charts, line charts, tables,
+etc.) are available both for viewing and for download.
 
 \vspace{1cm}
 
-Table~\ref{tab:tableOldFashioned} summarizes common statistical measures of model performance, such as bias, root mean square error, temporal and spatial correlations and the index of agreement (see Chapter \ref{ch:Intro}) against EMEP measurement stations.
+To allow for easy comparison of this year's model performance with earlier evaluation reports, Table~\ref{tab:tableOldFashioned} summarizes common statistical measures of model performance, such as bias, root mean square error, temporal and spatial correlations and the index of agreement (see Chapter \ref{ch:Intro}) against EMEP measurement stations within the whole model domain.
 
 \begin{table}\small
 % in 2020 (for reporting 2018), the numbers in this table were taken from:
@@ -294,7 +283,7 @@ Ozone daily mean (ppb)
 %  & 13  &  1.62  &   1.01  &   -37 & 0.70 &  0.91 & 0.85\\%2020
    & 13  &  1.56  &   0.97  &   -38 & 0.65 &  0.95 & 0.85\\%2021
 %SO4_in_PM2.5 ug/m3
-\chem{SO_4^{2-}} in \PM[2.5] (\ug)
+%\chem{SO_4^{2-}} in \PM[2.5] (\ug)
 %& 16   &   2.14   &  1.58  &   -26 & 1.64 &  0.65 & 0.62\\%2014
 %& 15   &   1.78   &  1.40  &   -21 & 1.17 &  0.44 & 0.60\\%2015
 %&  2   &   2.01   &  1.43  &   -29 & 0.58 &  1.00 & 0.73\\%2016-commdays
@@ -303,7 +292,7 @@ Ozone daily mean (ppb)
 %&  1   &   1.51   &  0.63  &   -58 & 0.88 &  0.00 & 0.00\\%2018
 %&  1   &   1.71   &  0.73  &   -57 & 0.98 &  0.00 & 0.00\\%2019
 %&  2   &   1.81   &  0.87  &   -52 & 0.96 &  1.00 & 0.58\\%2020 (too few stations)
- &  3   &   1.22   &  0.79  &   -35 & 0.50 &  0.33 & 0.46\\%2021
+%&  3   &   1.22   &  0.79  &   -35 & 0.50 &  0.33 & 0.46\\%2021 (too few stations)
 %NO3-_in_Air ug/m3  (also included in SN chapter, but there as ug(N)/m3)
 \chem{NO_3^-} (\ug)
 %  & 16  &  2.40  &  2.02 &  -16 & 0.68 & 0.93 & 0.94\\%2014
@@ -325,7 +314,7 @@ Ozone daily mean (ppb)
 %  & 13  &  1.01  &  1.23  &   22 & 0.55 & 0.29 & 0.59\\%2020
    & 13  &  1.20  &  1.47  &   23 & 0.56 & 0.63 & 0.77\\%2021
 %NO3_in_PM25 ug/m3
-\chem{NO_3^-} in \PM[2.5] (\ug) $\star$
+%\chem{NO_3^-} in \PM[2.5] (\ug) $\star$
 %  &  9  &   3.36  &   2.18 &   -35 & 4.06 & 0.90 & 0.52\\%2014
 %  & 14  &   1.18  &   1.58 &    34 & 0.69 & 0.90 & 0.90\\%2015
 %  &  2  &   2.33  &   4.92 &   111 & 2.84 &-1.00 & 0.11\\%2016
@@ -335,7 +324,7 @@ Ozone daily mean (ppb)
 %  & 12  &   1.27  &   2.16 &    70 & 0.98 & 0.88 & 0.76\\%2019b
 %st   &  2  &   1.31  &   1.81 &    39 & 0.57 & 1.00 & 0.93\\%2020
 %  &  7  &   1.87  &   2.06 &    11 & 0.55 & 0.91 & 0.93\\%2020
-   &  3  &   1.36  &   1.73 &    28 & 0.39 & 0.99 & 0.94\\%2021
+%  &  3  &   1.36  &   1.73 &    28 & 0.39 & 0.99 & 0.94\\%2021 (too few stations)
 %NH4+_in_Air ug/m3
 \chem{NH_4^+} (\ug) % OBS CHOOSE CORRECT UNIT!!!!
 %  & 22  &   0.99  &   0.73  &  -26 & 0.39 & 0.92 & 0.88\\%2014
@@ -347,24 +336,24 @@ Ozone daily mean (ppb)
 %  & 26  &   0.65  &   0.55  &  -16 & 0.25 & 0.78 & 0.86\\%2020
    & 24  &   0.55  &   0.49  &  -12 & 0.21 & 0.82 & 0.88\\%2021
 %NH4_in_PM10 ug/m3
-\chem{NH_4^+} in \PM[10] (\ug) $\star$
+%\chem{NH_4^+} in \PM[10] (\ug) $\star$
 % &  3  &   1.37  &   1.45  &   6 & 0.22 & 0.79 & 0.49\\%2020
-  &  2  &   1.23  &   1.08  & -12 & 0.15 & 1.00 & 0.77\\%2021
+%  &  2  &   1.23  &   1.08  & -12 & 0.15 & 1.00 & 0.77\\%2021 (too few stations)
 %NH4_in_PM2.5 ug/m3
-\chem{NH_4^+} in \PM[2.5] (\ug) $\star$
+%\chem{NH_4^+} in \PM[2.5] (\ug) $\star$
 % & 16  &   0.83  &   0.97  &  16 & 0.39 &  0.80 & 0.84\\%2014
 % & 14  &   0.84  &   0.90  &   7 & 0.25 &  0.87 & 0.93\\%2015
 % &  2  &   1.39  &   1.95  &  40 & 0.65 & -1.00 & 0.38\\%2016
 % &  2  &   1.39  &   1.98  &  43 & 0.67 &  1.00 & 0.31\\%2017 
 % \\%2020 (too few stations with 75% coverage)
 % &  7  &   1.12  &   0.90  & -20 & 0.27 &  0.59 & 0.60\\%2020
-  &  3  &   0.84  &   0.78  &  -7 & 0.07 &  0.99 & 0.96\\%2021
+% &  3  &   0.84  &   0.78  &  -7 & 0.07 &  0.99 & 0.96\\%2021 (too few stations)
 %EC_in_PM10 ugC/m3
 %EC in \PM[10] (\ugC) $\star$
 %  & 3  &   0.36  &   0.39  &   8 & 0.09 & 0.48 & 0.66\\%2020
 %  & 1  &   0.39  &   0.27  & -30 & 0.11 & 0.00 & 0.00\\%2021 (too few stations)
 %EC_in_PM2.5 ugC/m3
-EC in \PM[2.5] (\ugC) $\star$
+%EC in \PM[2.5] (\ugC) $\star$
 %  & 16  &   0.38  &   0.34  &  -9 & 0.25 & 0.67 & 0.75\\%2014
 %  & 15  &   0.33  &   0.35  &   5 & 0.18 & 0.82 & 0.88\\%2015
 %  &  3  &   0.87  &   0.52  & -41 & 0.48 & 0.42 & 0.59\\%2016-commdays
@@ -375,13 +364,13 @@ EC in \PM[2.5] (\ugC) $\star$
 %  &  1  &   0.37  &   0.26  & -30 & 0.11 & 0.00 & 0.00\\%2019
 %  &  8  &   0.26  &   0.24  &  -7 & 0.09 & 0.29 & 0.52\\%2019b
 %  & 12  &   0.35  &   0.44  &  24 & 0.17 & 0.89 & 0.84\\%2020
-   &  3  &   0.51  &   0.44  & -14 & 0.08 & 1.00 & 0.97\\%2021
+%  &  3  &   0.51  &   0.44  & -14 & 0.08 & 1.00 & 0.97\\%2021 (too few stations)
 %OC_in_PM10 ugC/m3
 %OC in \PM[10] (\ugC) $\star$
 %  & 3  &   3.20  &   1.67  & -48 & 1.84 &-0.60 & 0.45\\%2020
 %  & 1  &   3.46  &   1.20  & -65 & 2.26 & 0.00 & 0.00\\%2021 (too few stations)
 %OC_in_PM2.5 ugC/m3
-OC in \PM[2.5] (\ugC) $\star$
+%OC in \PM[2.5] (\ugC) $\star$
 %  & 16  &   2.49  &   1.07  & -57 & 1.73 & 0.70 & 0.49\\%2014
 %  & 15  &   2.48  &   1.05  & -58 & 1.68 & 0.81 & 0.52\\%2015
 %  &  3  &   3.19  &   1.52  & -52 & 1.69 & 0.96 & 0.53\\%2016-commdays
@@ -392,7 +381,7 @@ OC in \PM[2.5] (\ugC) $\star$
 %  &  1  &   2.90  &   0.70  & -76 & 2.20 & 0.00 & 0.00\\%2019
 %  &  8  &   1.86  &   0.72  & -61 & 1.35 &-0.52 & 0.36\\%2019b
 %  & 12  &   2.77  &   1.91  & -31 & 1.53 & 0.26 & 0.53\\%2020
-   &  3  &   3.14  &   2.16  & -31 & 1.31 & 0.99 & 0.60\\%2021
+%  &  3  &   3.14  &   2.16  & -31 & 1.31 & 0.99 & 0.60\\%2021 (too few stations)
 %Na+_in_air ug/m3
 Na+ (\ug)
 %  & 26  &   0.78  &   0.89  &  14 &  0.53 & 0.78 & 0.87\\%2014
@@ -413,7 +402,7 @@ Na+ in \PM[10] (\ug)
 %  &  6  &   0.42  &   0.25 &  -41 &  0.38 & 0.80 & 0.62\\%2020
    &  6  &   0.25  &   0.26 &    6 &  0.09 & 0.15 & 0.56\\%2021
 %Na_in_PM2.5 ug/m3
-Na+ in \PM[2.5] (\ug) $\star$
+%Na+ in \PM[2.5] (\ug) $\star$
 %  & 14  &   0.15  &   0.15 &    0 &  0.04 & 0.92 & 0.96\\%2014
 %  & 13  &   0.10  &   0.08 &  -18 &  0.05 & 0.70 & 0.81\\%2015
 %  &  2  &   0.06  &   0.02 &  -58 &  0.04 &-1.00 & 0.16\\%2016
@@ -423,7 +412,7 @@ Na+ in \PM[2.5] (\ug) $\star$
 %  & 12  &   0.10  &   0.12 &   23 &  0.08 & 0.55 & 0.68\\%2019b
 %  &  2  &   0.07  &   0.01 &  -81 &  0.06 &-1.00 & 0.42\\%2020 (too few stations with 75% coverage)
 %  &  8  &   0.11  &   0.15 &   41 &  0.12 & 0.80 & 0.70\\%2020 (too few stations)
-   &  3  &   0.06  &   0.05 &   -2 &  0.03 & 0.82 & 0.64\\%2021
+%   &  3  &   0.06  &   0.05 &   -2 &  0.03 & 0.82 & 0.64\\%2021 (too few stations)
 \hline\hline
 
 \end{tabular}
