Update on Overleaf.

--- a/ExSummary.tex
+++ b/ExSummary.tex
@@ -98,7 +98,9 @@ We analyze trends in air concentrations for ozone, sulphur dioxide, particulate 
 Unfortunately, the EMEP observational network is dominated by sites in the western part of the EMEP domain and has hardly any coverage in the EECCA and western Balkan area. Therefore, the assessment discussed below is only valid for a part of the EMEP domain. Furthermore, the developments of emissions in the western and eastern part of the EMEP domain have followed different patterns, with clear decreases of most pollutants in the western countries but more stable (albeit gradually decreasing for most pollutants) in the eastern part of the domain over the 2000-2019 period. Thus, the trends in the eastern part of the EMEP domain are expected to be different than those presented here for the western part of the domain. Note also, that the uncertainties related to emissions and their trends in the eastern countries are large.
 
 %SOX: Wenche
-The SO$_x$ emissions in the EU27+UK+EFTA countries have declined by more than 80\% (-4.3\% yr$^{-1}$) the last two decades. This is reflected in both the observed and modelled trends for all the atmospheric sulfur components. The average total reductions in observations for the last 20 years (2000--2019) are 74\%, 61\% and 60\% for \soii, \soiv in aerosols and in wet deposition respectively, while the reductions in model calculations are somewhat larger: 97\%, 72\% and 81\%, respectively.\QUERY{Burde vi si noe om 'mismatch' between obs and mod and emissions?}
+The SO$_x$ emissions in the EU27+UK+EFTA countries have declined by more than 80\% (-4.3\% yr$^{-1}$) the last two decades. This is reflected in both the observed and modelled trends for all the atmospheric sulfur components. The average total reductions in observations for the last 20 years (2000--2019) are 74\%, 61\% and 60\% for \soii, \soiv in aerosols and in wet deposition respectively, while the reductions in model calculations are somewhat larger: 97\%, 72\% and 81\%, respectively.
+
+It is not clear why the reductions in the reported emissions and the trends calculated by the model are larger than what it seen in the the observations. It might potentially indicate that the emission reductions reported are somewhat optimistic for some countries. However, firm conclusions are difficult to draw.
 
 %NOx Hilde
 We find that oxidized nitrogen in precipitation and in air (NO$_2$, HNO$_3$, NO$_3^{-}$ aerosol and the sum of HNO$_3$ and NO$_3^{-}$ aerosol) has been decreasing since 2000. However, the decrease in the observations (-24\%, 1.2\% yr$^{-1}$) for NO$_2$ and for wet deposition of oxidized nitrogen (-26\%, -1.4\% yr$^{-1}$) are smaller than in model calculations (-42\%, -2.2\% yr$^{-1}$ for NO$_2$) and -40\% (-2.3\% yr$^{-1}$) for wet deposition of oxidized nitrogen. The changes found for observations of oxidized nitrogen compunds are also significantly smaller than the changes in reported emissions (-48\% for EU27+UK+EFTA countries) for 2000--2019.
@@ -164,13 +166,9 @@ The  fine/coarse fractions for sea-salt and nitrate were modified. Emissions and
 
 
 
-\subsubsection*{Development in the monitoring programme} \QUERY{Wenche/NILU to update}
-The two last chapters of the report present the implementation of the EMEP monitoring strategy and general development in the monitoring programme including data submission. There are large differences between Parties in the level of implementation, as well as significant changes in the national activities during the period 2000-2018. With respect to the requirement for level 1 monitoring, 40\% of the Parties have had an improvement since 2010, while 33\% have reduced the level of monitoring. For level 2 monitoring there has been a general positive development in recent years. However, only few sites have a complete measurement program.
+\subsubsection*{Development in the monitoring programme} %WAa updated 31/8/2021
+The last chapter of the report present the implementation of the EMEP monitoring strategy and general development in the monitoring programme including data submission. There are large differences between Parties in the level of implementation, as well as significant changes in the national activities during the period 2010-2019. With respect to the requirement for level 1 monitoring, 35\% of the Parties have had an improvement since 2010, while 37\% have reduced the level of monitoring. For level 2 monitoring there has been a general positive development, but only few sites have a complete measurement program.
 
-The complexity of data reporting has increased in recent years, and it is therefore now mandatory for the data providers to use the submission and validation tool when submitting data to EMEP to improve the quality and timeliness in the data flow. 
-There is a need for improvements in the reporting, as only half of the data 
-providers use the submission tool, and less than 60\% report within the deadline of 31 July.
-
-For the level 2 parameters, there have been large improvements in the data quality and measurement capabilities over the last decade resulting from development in ACTRIS (European Research Infrastructure for the observation of Aerosol, Clouds and Trace Gases) in co-operation with EMEP and the WMO Global Atmospheric Watch Programme (GAW). New routines for quality assurance for VOCs have been developed, including a digital tool (Atmospheric VOC Assessment Tool, @VOC@), which is presented briefly in this report. The tool will help streamline and harmonize the quality checks of VOC data in Europe.
+The complexity of data reporting has increased in recent years, and it is therefore now mandatory for the data providers to use the submission and validation tool when submitting data to EMEP to improve the quality and timeliness in the data flow.
 
 
