--- a/Titlepage.tex
+++ b/Titlepage.tex
@@ -7,8 +7,8 @@
     A. Benedictow, H. Klein, H. Brenna,
     A. Mortier, Jan Griesfeller
 % EMEP/CCC
-    W. Aas, S. Eckhardt, A.-G. Hjellbrekke, S. M. Platt, 
-    S. Solberg, K. T{\o}rseth, K. E. Yttri
+    W. Aas, A.-G. Hjellbrekke, S.Solberg,
+    K. T{\o}rseth, K. E. Yttri
 % EMEP/CEIP
     K. Mareckova, B.  Matthews, S. Schindlbacher, 
     B. Ullrich,  R. Wankm\"uller
@@ -19,10 +19,7 @@
 % TNO
    J.P. Kuenen
 %   H. A.C. Denier van der Gon, J. J.P. Kuenen, A. %J.H. Visschedijk
-% EMPA: 
-   S. Reimann, M. Hill
-% DWD:
-   A. Claude 
+
 },
   pdftitle = {EMEP Status Report 1/2021},
   pdfsubject = {Transboundary Air Pollution},
@@ -60,9 +57,8 @@ Date: \today\\
     \mbox{Augustin Mortier, Jan Griesfeller}\\
 \\
     EMEP/CCC: &
-    \mbox{Wenche Aas, Sabine Eckhardt, Anne Hjellbrekke,}
-    \mbox{Sverre Solberg, Stephen Matthew Platt,} 
-    \mbox{Karl Espen Yttri, Kjetil T{\o}rseth,}\\
+    \mbox{Wenche Aas, Anne Hjellbrekke, Sverre Solberg,}
+    \mbox{ Kjetil T{\o}rseth, Karl Espen Yttri}\\
 \\
     EMEP/CEIP: &
     \mbox{Katarina Mareckova, Bradley Matthews,}
@@ -77,9 +73,7 @@ Date: \today\\
     \mbox{Jeroen J.P. Kuenen,}
 %    \mbox{Antoon J.H. Visschedijk}\\ 
 \\
-    EMPA: & \mbox{Stefan Reimann, Matthias Hill}\\
-\\
-    DWD: & \mbox{Anja Claude }\\
+
 
   \end{tabular}
 
